<resources>
    <string name="Rate_us">Give us your Stars!</string>
    <string name="_album">album</string>
    <string name="_artist">artist</string>
    <string name="_composer">composer</string>
    <string name="_format">format</string>
    <string name="_genre">genre</string>
    <string name="_path">path</string>
    <string name="_replaygain">rgain</string>
    <string name="_title">title</string>
    <string name="_track">track</string>
    <string name="_year">year</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_check_upgrade">Check for upgrade</string>
    <string name="accelerometer_shake">Accelerometer shake</string>
    <string name="action_clear">Clean</string>
    <string name="add">New mission</string>
    <string name="add_to">Add to…</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_homescreen">Add to homescreen…</string>
    <string name="add_to_playlist">Add to playlist…</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="album">Album</string>
    <string name="album_track">Album, track number</string>
    <string name="albumartists">Album Artists</string>
    <string name="albums">Albums</string>
    <string name="all_songs">All tracks</string>
    <string name="allow_disposed_exceptions_key">allow_disposed_exceptions_key</string>
    <string name="allow_heap_dumping_key">allow_heap_dumping_key</string>
    <string name="always_ask_open_action_key">always_ask_player</string>
    <string name="always_show">Always show</string>
    <string name="app_name">Play Tube Pop-up</string>
    <string name="app_update_notification_content_text">Tap to download</string>
    <string name="app_update_notification_content_title">Floating Tunes Update Available!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="artist">Artist</string>
    <string name="artist_album">Artist, album</string>
    <string name="artist_album_title">Artist, album, title</string>
    <string name="artist_album_track">Artist, album, track number</string>
    <string name="artist_year">Artist, year</string>
    <string name="artist_year_album">Artist, year, album</string>
    <string name="artists">Artists</string>
    <string name="audio">Audio</string>
    <string name="audio_m4a_key">audio_m4a</string>
    <string name="audio_webm_key">audio_webm</string>
    <string name="auto">Auto</string>
    <string name="auto_queue_key">auto_queue_key</string>
    <string name="autoplay_through_intent_key">autoplay_through_intent</string>
    <string name="autoplaylist_playcounts_disabled">Do not create an automatic playlist</string>
    <string name="autoplaylist_playcounts_fmt" formatted="false">"%s 'Top %.0f' playlist"</string>
    <string name="autoplaylist_playcounts_name">Top %d</string>
    <string name="autoplaylist_playcounts_summary">Automatically create a</string>
    <string name="autoplaylist_playcounts_title">Automatic playlist creation</string>
    <string name="background_player_key">background_player</string>
    <string name="best_resolution">Best resolution</string>
    <string name="best_resolution_key">best_resolution</string>
    <string name="black_theme_key">black_theme</string>
    <string name="bottom_add_to_next">Add to the queue</string>
    <string name="bottom_add_to_playlist">Add to playlist</string>
    <string name="bottom_delete">Delete</string>
    <string name="bottom_play_now">Play now</string>
    <string name="bottom_remove">Remove from queue</string>
    <string name="bottom_share">Share</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness_gesture_control_key">brightness_gesture_control</string>
    <string name="cancel">Cancel</string>
    <string name="caption_auto_generated">Auto-generated</string>
    <string name="caption_setting_description">Modify player caption text scale and background styles. Requires app restart to take effect.</string>
    <string name="caption_setting_title">Captions</string>
    <string name="caption_settings_key">caption_settings_key</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="charging">Charging</string>
    <string name="charset_letters_and_digits">Letters and digits</string>
    <string name="charset_letters_and_digits_value">CHARSET_LETTERS_AND_DIGITS</string>
    <string name="charset_most_special_characters">Most special characters</string>
    <string name="charset_most_special_value">CHARSET_MOST_SPECIAL</string>
    <string name="checksum">Checksum</string>
    <string name="choose_playlist_name">Choose playlist name</string>
    <string name="choose_size">Choose size of pop-up player</string>
    <string name="clear_finished_download">Clear finished downloads</string>
    <string name="clear_search_history_key">clear_search_history</string>
    <string name="clear_views_history_key">clear_play_history</string>
    <string name="close">Close</string>
    <string name="close_notification">Close notification</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_continue">Continue with Facebook</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_smart_device_instructions">To connect your account, open the Facebook app on your mobile device and check for notifications.</string>
    <string name="com_facebook_smart_device_instructions_or">- OR -</string>
    <string name="com_facebook_smart_login_confirmation_cancel">Not you?</string>
    <string name="com_facebook_smart_login_confirmation_continue_as">Continue as %1$s</string>
    <string name="com_facebook_smart_login_confirmation_title">Confirm Login</string>
    <string name="com_facebook_tooltip_default">"You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="create">CREATE</string>
    <string name="create_playlist">Create New Playlist</string>
    <string name="dialog_confirm">OK</string>
    <string name="download_path_audio_title">Audio download path</string>
    <string name="download_path_title">Video download path</string>
    <string name="downloads">Downloads</string>
    <string name="enqueue">Queue</string>
    <string name="grid">Grid</string>
    <string name="manage_playlist">Manage</string>
    <string name="msg_name">Filename</string>
    <string name="msg_threads">Threads</string>
    <string name="notice_body">Youtube terms has restricted the use of background play.You can try our power saving mode instead.</string>
    <string name="notice_title">Important Notice</string>
    <string name="pause_downloads">Pause downloads</string>
    <string name="play">Play</string>
    <string name="sleep_off">OFF</string>
    <string name="sleep_on">ON</string>
    <string name="sleep_unit">minutes</string>
    <string name="start_downloads">Start downloads</string>
    <string name="text_never_show">"Don't show again"</string>
    <string name="video">Video</string>
    <string name="write_down_name">write down name</string>
</resources>