<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_grid" android:id="@id/switch_mode" android:title="@string/grid" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/tb02_play" android:id="@id/start_downloads" android:visible="false" android:title="@string/start_downloads" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/tb02_pause" android:id="@id/pause_downloads" android:visible="false" android:title="@string/pause_downloads" app:showAsAction="ifRoom" />
    <item android:icon="@drawable/bottom_delete" android:id="@id/clear_list" android:visible="false" android:title="@string/clear_finished_download" app:showAsAction="ifRoom" />
</menu>