<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/toolbar_layout" layout="@layout/toolbar_layout" />
    <TextView android:id="@id/file_name_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="6.0dip" android:text="@string/msg_name" android:layout_below="@id/toolbar_layout" />
    <EditText android:id="@id/file_name" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="6.0dip" android:maxLines="1" android:layout_below="@id/file_name_text_view" android:inputType="text" />
    <RadioGroup android:gravity="left" android:orientation="horizontal" android:id="@id/video_audio_group" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginBottom="6.0dip" android:layout_below="@id/file_name">
        <RadioButton android:id="@id/video_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/video" />
        <RadioButton android:id="@id/audio_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/audio" />
        <RadioButton android:id="@id/subtitle_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/caption_setting_title" />
    </RadioGroup>
    <Spinner android:id="@id/quality_spinner" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="12.0dip" android:minWidth="150.0dip" android:layout_below="@id/video_audio_group" />
    <TextView android:id="@id/threads_text_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_marginBottom="6.0dip" android:text="@string/msg_threads" android:layout_below="@id/quality_spinner" />
    <LinearLayout android:orientation="horizontal" android:id="@id/threads_layout" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_below="@id/threads_text_view">
        <TextView android:gravity="center_vertical" android:id="@id/threads_count" android:paddingLeft="2.0dip" android:layout_width="25.0dip" android:layout_height="fill_parent" />
        <SeekBar android:id="@id/threads" android:layout_width="fill_parent" android:layout_height="wrap_content" android:max="31" android:progress="3" />
    </LinearLayout>
</RelativeLayout>