<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="300.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:id="@id/title" android:background="@color/colorPrimaryPink" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/create_playlist" />
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="16.0dip" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip">
        <FrameLayout android:layout_gravity="center" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText android:textSize="16.0sp" android:textColor="@color/black" android:textColorHint="@color/black_alpha_66" android:gravity="center_vertical" android:layout_gravity="center_vertical" android:id="@id/et_name" android:background="@null" android:layout_width="fill_parent" android:layout_height="32.0dip" android:hint="@string/write_down_name" android:maxLines="1" android:lines="1" android:singleLine="true" android:imeOptions="actionGo" />
        </FrameLayout>
        <View android:background="#33000000" android:layout_width="fill_parent" android:layout_height="1.0px" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingBottom="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip">
        <Button android:id="@id/cancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="true" style="@style/Button.ww" />
        <Button android:id="@id/create" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:text="@string/create" android:layout_weight="1.0" android:textAllCaps="true" android:layout_marginStart="16.0dip" style="@style/Button.pp" />
    </LinearLayout>
</LinearLayout>