<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/dialog_shape" android:layout_width="fill_parent" android:layout_height="wrap_content" android:keepScreenOn="true" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/icon" android:background="@drawable/tb02_logo_1024" android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="20.0dip" android:layout_centerHorizontal="true" />
    <TextView android:textSize="19.0sp" android:textColor="@android:color/white" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/notice_title" android:layout_below="@id/icon" android:layout_centerHorizontal="true" />
    <TextView android:textSize="14.0sp" android:textColor="@android:color/white" android:gravity="center" android:id="@id/body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="@string/notice_body" android:layout_below="@id/title" android:layout_centerHorizontal="true" android:layout_marginStart="10.0dip" android:layout_marginEnd="10.0dip" />
    <RelativeLayout android:id="@id/rl_show_toast" android:background="@drawable/ripple_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_below="@id/body" android:layout_marginStart="16.0dip">
        <CheckBox android:id="@id/cb_show" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentStart="true" android:buttonTint="@android:color/white" />
        <TextView android:textColor="@android:color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_never_show" android:layout_centerVertical="true" android:layout_toEndOf="@id/cb_show" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_ok" android:background="@drawable/ripple_bg" android:padding="10.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/rl_show_toast" android:layout_alignParentEnd="true">
        <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@id/dialog_ok" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:text="@string/dialog_confirm" android:layout_centerInParent="true" android:layout_marginEnd="16.0dip" />
    </RelativeLayout>
</RelativeLayout>