<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/app_bar_bg" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/ll_create" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:padding="15.0dip" android:layout_width="@dimen/item_default_height_material" android:layout_height="@dimen/item_default_height_material" android:src="@drawable/bottom_add" />
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_playlist" android:layout_weight="1.0" />
    </LinearLayout>
    <include layout="@layout/divider" />
    <LinearLayout android:id="@id/ll_manage" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:padding="15.0dip" android:layout_width="@dimen/item_default_height_material" android:layout_height="@dimen/item_default_height_material" android:src="@drawable/bottom_manage" />
        <TextView android:textSize="15.0sp" android:textColor="#ffffffff" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/manage_playlist" android:layout_weight="1.0" />
    </LinearLayout>
    <include layout="@layout/divider" />
    <LinearLayout android:id="@id/ll_cancel" android:background="?selectableItemBackground" android:layout_width="fill_parent" android:layout_height="@dimen/item_default_height_material">
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>