<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:divider="?android:dividerHorizontal" android:showDividers="middle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginStart="36.0dip" android:layout_marginEnd="36.0dip">
        <ImageView android:layout_gravity="top" android:id="@id/icon" android:layout_width="48.0dip" android:layout_height="48.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="2.0dip" android:layout_marginBottom="2.0dip" android:src="@drawable/tb02_fallback_cover_large" />
        <TextView android:id="@id/filepath" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="5.0dip" android:layout_toEndOf="@id/icon" />
        <ProgressBar android:layout_gravity="center" android:id="@id/progress" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?android:buttonBarStyle">
        <Button android:enabled="false" android:id="@id/cancel" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/cancel" android:singleLine="true" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
        <Button android:enabled="false" android:id="@id/enqueue" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/enqueue" android:singleLine="true" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
        <Button android:enabled="false" android:id="@id/play" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/play" android:singleLine="true" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>