<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:padding="36.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="@id/timeSeekBar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/timeSeekBar">
        <TextView android:textSize="25.0sp" android:id="@id/timeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sleep_unit" app:layout_constraintBottom_toBottomOf="@id/timeSeekBar" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/timeSeekBar" />
        <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sleep_off" android:layout_marginEnd="10.0dip" />
            <androidx.appcompat.widget.SwitchCompat android:id="@id/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="false" />
            <TextView android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/sleep_on" android:layout_marginStart="10.0dip" />
        </LinearLayout>
    </LinearLayout>
    <com.popupnewvideoplayer.floatingpro.musicfree.v.CircularSeekBar android:id="@id/timeSeekBar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:circle_progress_color="?colorAccent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:max="35" app:pointer_color="?colorAccent" app:pointer_halo_color="?colorButtonNormal" app:pointer_halo_color_ontouch="?colorControlHighlight" />
</androidx.constraintlayout.widget.ConstraintLayout>